@@ -1,7 +1,7 @@
 package com.zooting.api.global.config;
 
 import com.zooting.api.global.jwt.JwtAuthenticateFilter;
-import com.zooting.api.global.jwt.JwtService;
+import com.zooting.api.global.jwt.service.JwtService;
 import com.zooting.api.global.security.handler.CustomOAuth2FailHandler;
 import com.zooting.api.global.security.handler.CustomOAuth2SuccessHandler;
 import com.zooting.api.global.security.oauth2.service.CustomOAuth2UserService;
@@ -17,9 +17,8 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 @Configuration
@@ -33,14 +32,14 @@ public class WebSecurityConfig {
     private final JwtService jwtService;
     private static final String[] URL_WHITE_LIST = {"/error", "/login", "/favicon.ico",
             "/health", "/api-docs/**", "/swagger-ui/**",
-            "/swagger-resources/**", "/swagger-ui.html"};
+            "/swagger-resources/**", "/swagger-ui.html", "/api/token/**"};
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
                 .httpBasic(AbstractHttpConfigurer::disable)
+                .cors(corsConfig -> corsConfig.configurationSource(corsConfigurationSource()))
                 .formLogin(AbstractHttpConfigurer::disable)
-                .cors(AbstractHttpConfigurer::disable)
                 .sessionManagement(session ->
                         session
                                 .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
@@ -53,6 +52,7 @@ public class WebSecurityConfig {
                         .userInfoEndpoint(userInfo -> userInfo
                                 .userService(customOAuth2UserService))
                         .successHandler(customOAuth2SuccessHandler)
+                        .failureHandler(customOAuth2FailHandler)
                 )
                 .addFilterBefore(jwtAuthenticateFilter(), UsernamePasswordAuthenticationFilter.class);
 
@@ -64,22 +64,23 @@ public class WebSecurityConfig {
         return new JwtAuthenticateFilter(jwtService, URL_WHITE_LIST);
     }
 
-    @Bean
+    // CORS 설정
     CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-
-        configuration.setAllowedOriginPatterns(List.of("*"));
-        configuration.setAllowedMethods(Arrays.asList("HEAD", "POST", "GET", "DELETE", "PUT", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList(      // 요청 헤더 중 허용할 헤더 설정
-                "Authorization",
-                "Cache-Control",
-                "Content-Type"
-        ));
-        configuration.setAllowCredentials(true);
-
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
+        final List<String> allowedHeaders = List.of(
+                "*"
+        );
+        final List<String> allowedOriginPatterns = List.of(
+                "http://localhost:8080",
+                "http://localhost:5173",
+                "https://i10a702.p.ssafy.io"
+        );
+        return request -> {
+            CorsConfiguration config = new CorsConfiguration();
+            config.setAllowedHeaders(allowedHeaders);
+            config.setAllowedMethods(Collections.singletonList("*"));
+            config.setAllowedOriginPatterns(allowedOriginPatterns); // ⭐️ 허용할 origin
+            config.setAllowCredentials(true);
+            return config;
+        };
     }
-
 }
